--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type": "module"
   },
   "dependencies": {
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.2.0",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
